fix:change photo

--- a/index.html
+++ b/index.html
@@ -146,8 +146,8 @@
 
         <div class="s-intro__content-media">
           <img
-            src="images/intro-bg.jpg"
-            srcset="images/intro-bg.jpg 1x, images/intro-bg.jpg 2x"
+            src="images/menu.jpg"
+            srcset="images/menu.jpg 1x, images/menu.jpg 2x"
             alt=""
           />
         </div>
